final on branch

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
 	font-family:Arial, Helvetica, sans-serif;
-	background-color: rgb(69, 255, 248);
-	color: rgb(108, 108, 108);
+	background-color: black;
+	color: gold;
 	display: block;
   margin: 10px auto 10px auto;
   padding: 3px;
