--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 	h1{
 		text-align: center;
-		text-decoration: bold;
+		text-decoration: underline;
 		color:white;
 		text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 		}
@@ -22,7 +22,7 @@ body {
 
 	h2{
 		text-align: center;
-		text-decoration:bold;
+		text-decoration:underline;
 	}
 
 	li{
@@ -34,7 +34,7 @@ body {
 		
 	}
 	ul li{
- 		list-style-position:inside
+ 		list-style-position:inside;
  		text-align:left;
   margin: 10px auto 10px auto;
   padding: 3px;
